--- a/LionTee/LionTee-Info.plist
+++ b/LionTee/LionTee-Info.plist
@@ -51,7 +51,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
+	<string>Adaptive_Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
